--- a/style.css
+++ b/style.css
@@ -8,25 +8,25 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #343444;
 }
 
+
+
 .tabela {
+    margin-top: 50px;
     width: 1000px;
-    height: 80vh;
+    min-height: 80vh;
+    max-height: 300vh;
     display: flex;
+    background-color: #f3f3f3;
 }
 
 .criacao {
     width: 25%;
-    background-color: #f3f3f3;
     position: relative;
     text-align: center;
     padding: 60px 1rem 0.5rem;
-}
-
-
-.criacao:nth-child(even) {
-    background-color: #e9e9e96b;
 }
 
 
@@ -56,6 +56,21 @@ body {
 
 .add_btn:hover {
     background-color: #aaa;
+    transform: scale(1.1);
+}
+
+
+.btn-modal {
+    right: 1rem;
+    font-size: 1rem;
+    border-radius: 3px;
+    background-color: #ffffff;
+    color: #000000;
+    cursor: pointer;
+}
+
+.btn-modal:hover {
+    transform: scale(1.1);
 }
 
 
@@ -69,15 +84,15 @@ body {
       rgba(15, 15, 15, 0.1) 0px 2px 4px;
     border-radius: 4px;
     padding: 0.5rem 1rem;
-    font-size: 1.5rem;
+    font-size:20px;
     margin: 0.5rem 0;
-
+    word-break: break-all;
 }
 
 .todo .close {
     position: absolute;
+    top: 0px;
     right: 1rem;
-    top: 0rem;
     font-size: 2rem;
     color: #ccc;
     cursor: pointer;
@@ -87,5 +102,83 @@ body {
 .todo .close:hover {
     color: #343444;
 }
+
+.todo:hover{
+    transform: scale(1.1);
+}
+
+
+.modal {
+    width: 450px;
+    position: fixed;
+    top: -50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: top 0.3s ease-in-out;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    z-index: 2;
+    background-color: #fff;
+  }
+
+
+.modal .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+    padding: 0.5rem;
+    
+  }
+
+.body {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.modal.active {
+    top: 15%;
+}
+
+
+#overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.modal .body {
+    padding: 0.75rem;
+}
+
+#overlay.active {
+    display: block;
+}
   
+#input_add,
+#input_submit {
+    padding: 0.5rem 1rem;
+    width: 100%;
+    margin: 0.25rem;
+}
+  
+#input_submit {
+    background-color: #4caf50;
+    color: #f3f3f3;
+    font-size: 1rem;
+    border: none;
+    cursor: pointer;
+}
+
+#input_submit:hover {
+    background-color: #265828;
+    transform: scale(1.1);
+}
   
